# EtherGlance

./: README.md  package-lock.json
AWSASDImodule/: EtherGlance - Shortcut.lnk
AWSASDImodule/AirQualityQuotient/: README.md  openaq_analysis.ipynb
DICOM Encryption and Anonymization/DOCUMENTATIONS/: ANONYMIZE FILE BY SELECTING IT FROM COMPUTER.docx  ANONYMIZING DATA FROM GIVEN SAMPLE.docx  COMPARISON SHEET.docx  DICOM anonymization (1).docx  DOCUMENTATION FOR DICOM ANONYMIZER PRO.docx  DOCUMENTATION FOR RADIANT DICOM VIEWER.docx  Reading DICOM Image in Python.docx  Running the scripts using Cmd.txt
DICOM Encryption and Anonymization/SCRIPTS/: anonymize-file.py  anonymizecopiesdoctorandpatient.py  anonymizefileandnamesfinall.py  doctorpatient.py
ICP-Medical-module/: README.md  setup.sh
Upload Radiology Images to EHR Orthanc Project/: createDicom.php  uploadDicom.html
amazon-comprehend-medical-document-processing/: README.md
expert-ai-nlp/: document.txt
icp-dao-engine/: .gitignore  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
icp-dao-engine/src/: main.py
icp/Diagnostic-Center-OS-IC-Canister/icboot/src/icboot/: Cargo.toml
icp/Diagnostic-Center-OS-IC-Canister/icboot/src/icboot/src/: lib.rs
icp/Diagnostic-Center-OS-IC-Canister/uploader/: 1  @  Cargo.toml
icp/Diagnostic-Center-OS-IC-Canister/uploader/src/: main.rs
installation docs/: Installation Steps for EHRs.docx  Installation_React webapp_Medical Invoice.docx  Medical Counseling Portal.docx
python and text files for nucypher/: anonymize-doctor.py  anonymize-patient.py
(+160 files in other folders)
