[package]
name = "uploader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
serde = "1.0.111"
serde_bytes = "0.11"
ic-agent = "0.8.0"
garcon = "0.2.3"
tokio = { version = "1.11.0", features = ["full"] }
